src/objects/zkmulti__HazMatDetails__c.object
<CustomObject>
    <fields>
        <fullName>zkmulti__ADRItemNumber__c</fullName>
        <label>ADR Item Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ADRPoints__c</fullName>
        <label>ADR Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__AdditionalDescription__c</fullName>
        <label>Additional Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ClassDivisionNumber__c</fullName>
        <label>Class Division Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__CommodityRegulatedLevelCode__c</fullName>
        <label>Commodity Regulated Level Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__EmergencyContactNumber__c</fullName>
        <description>Telephone number to use for contact in the event of an emergency</description>
        <inlineHelpText>Telephone number to use for contact in the event of an emergency</inlineHelpText>
        <label>Emergency Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>zkmulti__IDNumber__c</fullName>
        <label>ID Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Offeror__c</fullName>
        <description>Offeror&apos;s name or contract number, per DOT regulation</description>
        <inlineHelpText>Offeror&apos;s name or contract number, per DOT regulation</inlineHelpText>
        <label>Offeror</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__PackagingCountUnits__c</fullName>
        <description>Units in which the hazardous commodity is packaged</description>
        <inlineHelpText>Units in which the hazardous commodity is packaged</inlineHelpText>
        <label>Packaging Count Units</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__PackagingCount__c</fullName>
        <description>Number of units, in the units specified by the Packaging Count Units</description>
        <inlineHelpText>Number of units, in the units specified by the Packaging Count Units</inlineHelpText>
        <label>Packaging Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__PackagingGroupType__c</fullName>
        <label>Packaging Group Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__PackagingInstructionCode__c</fullName>
        <label>Packaging Instruction Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__PackagingTypeQuantity__c</fullName>
        <label>Packaging Type Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__PackagingType__c</fullName>
        <description>Ex. FIBERBOARD BOX, WOOD(EN) BOX, PLASTIC JERRICAN, METAL BOX, STEEL DRUM, OTHER, PLASTIC BOX, PLASTIC DRUM, STYROFOAM BOX, CYLINDERS and etc</description>
        <inlineHelpText>Ex. FIBERBOARD BOX, WOOD(EN) BOX, PLASTIC JERRICAN, METAL BOX, STEEL DRUM, OTHER, PLASTIC BOX, PLASTIC DRUM, STYROFOAM BOX, CYLINDERS and etc</inlineHelpText>
        <label>Packaging Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ProperShippingName__c</fullName>
        <label>Proper Shipping Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__ReferenceNumber__c</fullName>
        <label>Reference Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__RegulationSet__c</fullName>
        <label>Regulation Set</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ReportableQuantity__c</fullName>
        <label>Reportable Quantity</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__SubRiskClass__c</fullName>
        <label>Sub Risk Class</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__TechnicalName__c</fullName>
        <label>Technical Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__TransportCategory__c</fullName>
        <label>Transport Category</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__TunnelRestrictionCode__c</fullName>
        <label>Tunnel Restriction Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__UnitOfMeasure__c</fullName>
        <label>Unit Of Measure</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>HazMat Details</label>
    <nameField>
        <label>HazMat Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HazMat Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>